# RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py  observability.py  schemas.py
app/db/: __init__.py  migrations.py
app/llm/: provider.py  types.py
app/rag/: chunking.py  embeddings.py  generator.py  ingestion.py  pipeline.py  prompting.py  retriever.py  vectorstore.py
app/security/: __init__.py  widget_tokens.py
app/services/: __init__.py  chat.py  crawler.py  documents.py  metadata.py
app/static/: admin.html  api.js  index.html  styles.css  widget.js
app/ui/: streamlit_app.py
scripts/: ingest.py  smoke_test.py
tests/: conftest.py  test_api.py  test_chat.py  test_chunking.py  test_config.py  test_crawler.py  test_documents.py  test_ingestion.py  test_metadata.py  test_pipeline.py  test_prompting.py  test_providers.py  test_retriever.py  test_security.py
