[project]
name = "customer-support-rag"
version = "0.2.0"
description = "Customer support RAG MVP with FastAPI, ChromaDB, and vanilla JavaScript"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "chromadb>=0.5.5",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "onnxruntime<1.24; python_version < '3.11'",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pypdf>=5.1.0",
  "python-multipart>=0.0.9",
  "sentence-transformers>=3.0.1",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "E501"]
